devop303/Deployment-devop303.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devop303
  namespace: devop303
  labels:
    app: devop303
    tier: devops
spec:
  selector:
    matchLabels:
      app: devop303
  replicas: 2
  template:
    metadata:
      labels:
        app: devop303
    spec:
      containers:
        - name: devop303
          imagePullPolicy: Never
          image: library/devop303
          ports:
            - containerPort: 8884
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
