devop303/Service-devop303.yml
apiVersion: v1
kind: Service
metadata:
  name: devop303
  namespace: devop303
spec:
  selector:
    app: devop303
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
